Adding new untracked files. Working version of a chatbot

--- a/src/templates/index2.html
+++ b/src/templates/index2.html
@@ -183,7 +183,7 @@ function createDownloadLink(blob) {
 		  };
 		  var fd=new FormData();
 		  fd.append("audio_data",blob, filename);
-		  xhr.open("POST","/",true);
+		  xhr.open("POST","/input",true);
 		  xhr.send(fd);
 	})
 	li.appendChild(document.createTextNode (" "))//add a space in between
