Fixing issues with logic.py and adding tensorflowjs to chatbot.html

--- a/src/templates/chatbot.html
+++ b/src/templates/chatbot.html
@@ -36,6 +36,7 @@
 }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
 </head>
 <body>
     <h1 class="jumbotron text-center">Chatterbot in Python using Flask Framework</h1>
